; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_index.c_index_entry_dup.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_index.c_index_entry_dup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_7__**, i32*, %struct.TYPE_7__*)* @index_entry_dup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @index_entry_dup(%struct.TYPE_7__** %0, i32* %1, %struct.TYPE_7__* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_7__**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_7__*, align 8
  store %struct.TYPE_7__** %0, %struct.TYPE_7__*** %5, align 8
  store i32* %1, i32** %6, align 8
  store %struct.TYPE_7__* %2, %struct.TYPE_7__** %7, align 8
  %8 = load %struct.TYPE_7__**, %struct.TYPE_7__*** %5, align 8
  %9 = load i32*, i32** %6, align 8
  %10 = call i32 @INDEX_OWNER(i32* %9)
  %11 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %12 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i64 @index_entry_create(%struct.TYPE_7__** %8, i32 %10, i32 %13, i32* null, i32 0)
  %15 = icmp slt i64 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %22

17:                                               ; preds = %3
  %18 = load %struct.TYPE_7__**, %struct.TYPE_7__*** %5, align 8
  %19 = load %struct.TYPE_7__*, %struct.TYPE_7__** %18, align 8
  %20 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %21 = call i32 @index_entry_cpy(%struct.TYPE_7__* %19, %struct.TYPE_7__* %20)
  store i32 0, i32* %4, align 4
  br label %22

22:                                               ; preds = %17, %16
  %23 = load i32, i32* %4, align 4
  ret i32 %23
}

declare dso_local i64 @index_entry_create(%struct.TYPE_7__**, i32, i32, i32*, i32) #1

declare dso_local i32 @INDEX_OWNER(i32*) #1

declare dso_local i32 @index_entry_cpy(%struct.TYPE_7__*, %struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
